--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --live-reload=false",
+    "start": "ng serve --live-reload=false --host 0.0.0.0 --port 4200 --disable-host-check true",
     "build": "ng build --output-path docs --base-href /",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
