--- a/docs/assets/config.json
+++ b/docs/assets/config.json
@@ -1,3 +1,3 @@
 {
-    "repos":["java-fullstack","master-spring-boot","spring-security","learn-sql","java-mysql","ui-basics"]
+    "repos":["java-fullstack","master-spring-boot","spring-security","learn-sql","java-mysql","ui-basics","angular-frontend"]
 }
