--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,4 +1,4 @@
 {
-    "repos":["java-fullstack","master-spring-boot","spring-security","learn-sql","java-mysql","ui-basics","angular-frontend"],
+    "repos":["java-fullstack","master-spring-boot","spring-security","learn-sql","java-mysql","ui-basics","angular-frontend","ecommerce","ceo-dashboard"],
     "projects":false
 }
