--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --live-reload=false --host 0.0.0.0 --port 4200",
-    "build": "ng build --base-href /",
+    "build": "ng build --base-href / && node scripts/move-files.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
